err/souper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/persistent'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BTrees'...
Listing './lib/python3.5/site-packages/BTrees/tests'...
Listing './lib/python3.5/site-packages/BTrees-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/ZConfig'...
Listing './lib/python3.5/site-packages/ZConfig/components'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic/tests'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests/input'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing/extras'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/widget'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo/sample'...
Listing './lib/python3.5/site-packages/ZConfig-3.2.0.dist-info'...
Listing './lib/python3.5/site-packages/ZEO'...
Listing './lib/python3.5/site-packages/ZEO/asyncio'...
Listing './lib/python3.5/site-packages/ZEO/scripts'...
Listing './lib/python3.5/site-packages/ZEO/tests'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4/auth'...
Listing './lib/python3.5/site-packages/ZEO/tests/ZEO4/zrpc'...
Listing './lib/python3.5/site-packages/ZEO-5.1.1.egg-info'...
Listing './lib/python3.5/site-packages/ZODB'...
Listing './lib/python3.5/site-packages/ZODB/FileStorage'...
Listing './lib/python3.5/site-packages/ZODB/scripts'...
Listing './lib/python3.5/site-packages/ZODB/scripts/manual_tests'...
Listing './lib/python3.5/site-packages/ZODB/scripts/tests'...
Listing './lib/python3.5/site-packages/ZODB/tests'...
Listing './lib/python3.5/site-packages/ZODB-5.3.0.egg-info'...
Listing './lib/python3.5/site-packages/ZODB3-3.11.0.egg-info'...
Listing './lib/python3.5/site-packages/benchmark'...
Compiling './lib/python3.5/site-packages/benchmark/benchmark.py'...
***   File "./lib/python3.5/site-packages/benchmark/benchmark.py", line 41
    print name
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/benchmark/intersection.py'...
***   File "./lib/python3.5/site-packages/benchmark/intersection.py", line 229
    print "Cost of algorithm 1 / Cost of algorithm 2"
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/benchmark/sortbench.py'...
***   File "./lib/python3.5/site-packages/benchmark/sortbench.py", line 81
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/node'...
Listing './lib/python3.5/site-packages/node/behaviors'...
Listing './lib/python3.5/site-packages/node/ext'...
Listing './lib/python3.5/site-packages/node/ext/zodb'...
Listing './lib/python3.5/site-packages/node/testing'...
Listing './lib/python3.5/site-packages/node/tests'...
Listing './lib/python3.5/site-packages/node-0.9.22.egg-info'...
Listing './lib/python3.5/site-packages/node.ext.zodb-1.2.egg-info'...
Listing './lib/python3.5/site-packages/odict'...
Listing './lib/python3.5/site-packages/odict-1.6.2.egg-info'...
Listing './lib/python3.5/site-packages/persistent'...
Listing './lib/python3.5/site-packages/persistent/tests'...
Listing './lib/python3.5/site-packages/persistent-4.2.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumber'...
Listing './lib/python3.5/site-packages/plumber/tests'...
Listing './lib/python3.5/site-packages/plumber-1.5.egg-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/catalog'...
Listing './lib/python3.5/site-packages/repoze/catalog/indexes'...
Compiling './lib/python3.5/site-packages/repoze/catalog/indexes/field.py'...
***   File "./lib/python3.5/site-packages/repoze/catalog/indexes/field.py", line 183
    raise RuntimeError, 'n-best used without limit'
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repoze/catalog/indexes/tests'...
Compiling './lib/python3.5/site-packages/repoze/catalog/query.py'...
***   File "./lib/python3.5/site-packages/repoze/catalog/query.py", line 937
    print '  ' * level + str(node)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/repoze/catalog/tests'...
Listing './lib/python3.5/site-packages/repoze.catalog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/souper'...
Compiling './lib/python3.5/site-packages/souper/soup.py'...
***   File "./lib/python3.5/site-packages/souper/soup.py", line 142
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/souper-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/transaction'...
Listing './lib/python3.5/site-packages/transaction/tests'...
Listing './lib/python3.5/site-packages/transaction-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/lockfile'...
Listing './lib/python3.5/site-packages/zc.lockfile-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/zdaemon'...
Listing './lib/python3.5/site-packages/zdaemon/tests'...
Listing './lib/python3.5/site-packages/zdaemon-4.2.0.egg-info'...
Listing './lib/python3.5/site-packages/zodbpickle'...
Compiling './lib/python3.5/site-packages/zodbpickle/pickle_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/pickle_2.py", line 882
    except _Stop, stopinst:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zodbpickle/pickletools_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/pickletools_2.py", line 1803
    print "skipping %r: it doesn't look like an opcode name" % name
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zodbpickle/tests'...
Compiling './lib/python3.5/site-packages/zodbpickle/tests/pickletester_2.py'...
***   File "./lib/python3.5/site-packages/zodbpickle/tests/pickletester_2.py", line 433
    x = [0, 1L, 2.0, 3.0+0j]
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zodbpickle-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/deprecation'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/index'...
Listing './lib/python3.5/site-packages/zope/index/field'...
Listing './lib/python3.5/site-packages/zope/index/keyword'...
Listing './lib/python3.5/site-packages/zope/index/text'...
Listing './lib/python3.5/site-packages/zope/index/text/tests'...
Listing './lib/python3.5/site-packages/zope/index/topic'...
Listing './lib/python3.5/site-packages/zope/index/topic/tests'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/lifecycleevent'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.deprecation-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.index-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.lifecycleevent-4.2.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
